fix(core): hover state should be visible on card

--- a/resources/skins.citizen.styles/Drawer__button.less
+++ b/resources/skins.citizen.styles/Drawer__button.less
@@ -1,4 +1,6 @@
 .citizen-drawer__button {
+	position: relative; // To make background hover state visible
+
 	&Icon {
 		display: grid;
 		place-content: center;
