--- a/resources/skins.citizen.styles/Search__button.less
+++ b/resources/skins.citizen.styles/Search__button.less
@@ -1,4 +1,6 @@
 .citizen-search__button {
+	position: relative; // To make background hover state visible
+
 	&Icon {
 		display: flex;
 		align-items: center;
